# lxmf-conformance

./: .gitignore  LICENSE  README.md  ROADMAP.md  _lxmd_pn.py  bridge_client.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: conformance.yml
reference/: lxmf_kotlin.kt  lxmf_python.py
tests/: test_announce_discovery.py  test_attachments.py  test_combined.py  test_dedup.py  test_direct.py  test_direct_large.py  test_opportunistic.py  test_payload_format.py  test_propagation.py
